# piecutter-cli

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
examples/diamonds-price-regression/: api_config.yaml  bentofile.yaml  requirements.txt  service.py
examples/diamonds-price-regression/notebooks/: 2.0-data-analysis.ipynb  3.0-machine-learning-modeling.ipynb
examples/diamonds-price-regression/notebooks/.ipynb_checkpoints/: 1.0-data-preprocessing-checkpoint.ipynb
examples/diamonds-price-regression/scripts/: load_model.py
examples/diamonds-prices-regression/bento/: bentofile.yaml  lightgbm_price_regressor.pkl  predict.py  service.py  train.csv  train.py
examples/diamonds-prices-regression/notebooks/: 1.0-data-preprocessing.ipynb  3.0-machine-learning-modeling.ipynb
examples/diamonds-prices-regression/notebooks/.ipynb_checkpoints/: 2.0-data-analysis-checkpoint.ipynb  3.0-machine-learning-modeling-checkpoint.ipynb
examples/diamonds-prices-regression/results/models/: lightgbm_price_regressor.pkl
piecutter/: main.py  utils.py
piecutter/commands/: add.py  generate.py  new.py
piecutter/frameworks/: bento.py  piecutter.py  pycaret.py
piecutter/generators/: code.py  files.py  folders.py
piecutter/templates/: base_structure.py  bento_structure.py
tests/: test_new_project_command.py  test_package_version.py  test_piecutter.py
